--- a/styles.css
+++ b/styles.css
@@ -532,13 +532,17 @@ body {
     padding: 20px;
     margin-bottom: 20px;
     background-color: #222044;
-    border: 4px solid #6626FF
+    border: 4px solid #6626FF;
+    width: 100%;  /* Ensure it takes the full width of its container */
+    min-height: 370px;
+    box-sizing: border-box; /* Include padding and border in the element's total width and height */
 }
 
 .project-card .action-icons {
     position: absolute;
     top: 10px;
     right: 10px;
+    background-color: #222044;
 }
 .project-card .action-icons i {
     margin-left: 10px;
@@ -613,7 +617,7 @@ input[type=text] {
     border-radius: 8px;
     padding: 20px;
     margin-bottom: 20px;
-    margin-left: 330px;
+    margin-left: 150px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 1);
     font-family: 'PixelNormal';
     color: white;
